# UnalixAndroid

./: .gitignore  .gitmodules  BUILDING.md  README.md  build.gradle  settings.gradle
.github/workflows/: build.yml  java-tests.yml
app/: CMakeLists.txt  build.gradle
app/src/: CMakeLists.txt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/unalixcpp/src/: clear_url.cpp  clear_url.hpp  dns.cpp  dns.hpp  exceptions.hpp  http.cpp  http.hpp  http_utils.cpp  http_utils.hpp  rulesets.hpp  socket.cpp  socket.hpp  socket_utils.cpp  socket_utils.hpp  socks5.cpp  socks5.hpp  ssl.cpp  ssl.hpp  ssl_certs.hpp  unalix.hpp  unalix_jni.cpp  unalix_jni.hpp  unshort_url.cpp  unshort_url.hpp  uri.cpp  uri.hpp  utils.cpp  utils.hpp
app/src/main/java/com/amanoteam/libunalix/: LibUnalix.java
app/src/main/java/com/amanoteam/libunalix/exceptions/: UnalixDNSException.java  UnalixException.java  UnalixFileException.java  UnalixHTTPException.java  UnalixJSONException.java  UnalixMemoryException.java  UnalixOSException.java  UnalixRegexException.java  UnalixRulesetsException.java  UnalixSSLException.java  UnalixSocketException.java  UnalixURIException.java
app/src/main/java/com/amanoteam/unalix/: ClearURLActivity.java  CopyToClipboardActivity.java  MainActivity.java  SettingsActivity.java  SettingsFragment.java  UnalixService.java  UnshortURLActivity.java
app/src/main/java/com/amanoteam/unalix/activities/: CleanURLActivity.java  ClearURLActivity.java  CopyToClipboardActivity.java  MainActivity.java  SettingsActivity.java  UnshortURLActivity.java
app/src/main/java/com/amanoteam/unalix/core/: CoreApplication.java  Ruleset.java
app/src/main/java/com/amanoteam/unalix/databases/: RulesetContract.java  RulesetsDatabaseHelper.java
app/src/main/java/com/amanoteam/unalix/fragments/: CleanURLFragment.java  IntentChooserDialogFragment.java  RulesetsFragment.java  SettingsFragment.java
app/src/main/java/com/amanoteam/unalix/services/: RulesetsUpdateService.java  UnalixService.java
app/src/main/java/com/amanoteam/unalix/utilities/: PackageUtils.java  RulesetsUtils.java
app/src/main/java/com/amanoteam/unalix/wrapper/: Unalix.java
app/src/main/java/com/amanoteam/unalix/wrappers/: Unalix.java
app/src/main/jni/patches/libressl/: crypto-x509-by_dir.c.patch
app/src/main/jni/tool/: tool.nimble
app/src/main/jni/tool/src/: exceptions.nim  tool.nim  types.nim  utils.nim
app/src/main/jni/wrapper/: wrapper.nimble
app/src/main/jni/wrapper/src/: wrapper.nim
app/src/main/jniLibs/arm64-v8a/: placeholder
app/src/main/res/color/: mtrl_list_item_tint.xml
app/src/main/res/drawable/: alert_dialog_bg.xml  baseline_cleaning_services_24.xml  cleaning_icon.xml  clear_icon.xml  edit_text_border.xml  edit_text_border_dark.xml  edit_text_border_light.xml  ic_ballot.xml  ic_home.xml  ic_launcher_foreground.xml  ic_settings.xml  open_in_browser_icon.xml  outline_clear_24.xml  outline_open_in_browser_24.xml  outline_share_24.xml  share_icon.xml
app/src/main/res/layout/: a.xml  activities_list_item.xml  activity_main.xml  activity_settings.xml  add_ruleset.xml  clean_url_fragment.xml  intent_chooser.xml  rulesets_fragment.xml  rulesets_list_item.xml
app/src/main/res/menu/: bottom_navigation_menu.xml  main_menu.xml  ruleset_menu.xml  rulesets_appbar_menu.xml  settings_menu.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: arrays.xml  ic_launcher_background.xml  styles.xml
app/src/main/res/values-v23/: styles.xml
app/src/main/res/values-v27/: styles.xml
app/src/main/res/xml/: preferences.xml
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
gradle/wrapper/: gradle-wrapper.properties
