# Sets the minimum version of CMake required to build your native library.
# This ensures that a certain set of CMake features is available to
# your build.

cmake_minimum_required(VERSION 3.4.1)

project(Unalix)

# Specifies a library name, specifies whether the library is STATIC or
# SHARED, and provides relative paths to the source code. You can
# define multiple libraries by adding multiple add_library() commands,
# and CMake builds them for you. When you build your app, Gradle
# automatically packages shared libraries with your APK.

set(CMAKE_CXX_STANDARD 20)

include_directories(
			src/main/cpp/unalixcpp/src
			src/main/cpp/bearssl/src
			src/main/cpp/bearssl/inc)

add_library( # Specifies the name of the library.
			bearssl

			# Sets the library as a shared library.
			SHARED

			# Provides a relative path to your source file(s).
			src/main/cpp/bearssl/src/settings.c
			src/main/cpp/bearssl/src/aead/ccm.c
			src/main/cpp/bearssl/src/aead/eax.c
			src/main/cpp/bearssl/src/aead/gcm.c
			src/main/cpp/bearssl/src/codec/ccopy.c
			src/main/cpp/bearssl/src/codec/dec16be.c
			src/main/cpp/bearssl/src/codec/dec16le.c
			src/main/cpp/bearssl/src/codec/dec32be.c
			src/main/cpp/bearssl/src/codec/dec32le.c
			src/main/cpp/bearssl/src/codec/dec64be.c
			src/main/cpp/bearssl/src/codec/dec64le.c
			src/main/cpp/bearssl/src/codec/enc16be.c
			src/main/cpp/bearssl/src/codec/enc16le.c
			src/main/cpp/bearssl/src/codec/enc32be.c
			src/main/cpp/bearssl/src/codec/enc32le.c
			src/main/cpp/bearssl/src/codec/enc64be.c
			src/main/cpp/bearssl/src/codec/enc64le.c
			src/main/cpp/bearssl/src/codec/pemdec.c
			src/main/cpp/bearssl/src/codec/pemenc.c
			src/main/cpp/bearssl/src/ec/ec_all_m15.c
			src/main/cpp/bearssl/src/ec/ec_all_m31.c
			src/main/cpp/bearssl/src/ec/ec_c25519_i15.c
			src/main/cpp/bearssl/src/ec/ec_c25519_i31.c
			src/main/cpp/bearssl/src/ec/ec_c25519_m15.c
			src/main/cpp/bearssl/src/ec/ec_c25519_m31.c
			src/main/cpp/bearssl/src/ec/ec_c25519_m62.c
			src/main/cpp/bearssl/src/ec/ec_c25519_m64.c
			src/main/cpp/bearssl/src/ec/ec_curve25519.c
			src/main/cpp/bearssl/src/ec/ec_default.c
			src/main/cpp/bearssl/src/ec/ec_keygen.c
			src/main/cpp/bearssl/src/ec/ec_p256_m15.c
			src/main/cpp/bearssl/src/ec/ec_p256_m31.c
			src/main/cpp/bearssl/src/ec/ec_p256_m62.c
			src/main/cpp/bearssl/src/ec/ec_p256_m64.c
			src/main/cpp/bearssl/src/ec/ec_prime_i15.c
			src/main/cpp/bearssl/src/ec/ec_prime_i31.c
			src/main/cpp/bearssl/src/ec/ec_pubkey.c
			src/main/cpp/bearssl/src/ec/ec_secp256r1.c
			src/main/cpp/bearssl/src/ec/ec_secp384r1.c
			src/main/cpp/bearssl/src/ec/ec_secp521r1.c
			src/main/cpp/bearssl/src/ec/ecdsa_atr.c
			src/main/cpp/bearssl/src/ec/ecdsa_default_sign_asn1.c
			src/main/cpp/bearssl/src/ec/ecdsa_default_sign_raw.c
			src/main/cpp/bearssl/src/ec/ecdsa_default_vrfy_asn1.c
			src/main/cpp/bearssl/src/ec/ecdsa_default_vrfy_raw.c
			src/main/cpp/bearssl/src/ec/ecdsa_i15_bits.c
			src/main/cpp/bearssl/src/ec/ecdsa_i15_sign_asn1.c
			src/main/cpp/bearssl/src/ec/ecdsa_i15_sign_raw.c
			src/main/cpp/bearssl/src/ec/ecdsa_i15_vrfy_asn1.c
			src/main/cpp/bearssl/src/ec/ecdsa_i15_vrfy_raw.c
			src/main/cpp/bearssl/src/ec/ecdsa_i31_bits.c
			src/main/cpp/bearssl/src/ec/ecdsa_i31_sign_asn1.c
			src/main/cpp/bearssl/src/ec/ecdsa_i31_sign_raw.c
			src/main/cpp/bearssl/src/ec/ecdsa_i31_vrfy_asn1.c
			src/main/cpp/bearssl/src/ec/ecdsa_i31_vrfy_raw.c
			src/main/cpp/bearssl/src/ec/ecdsa_rta.c
			src/main/cpp/bearssl/src/hash/dig_oid.c
			src/main/cpp/bearssl/src/hash/dig_size.c
			src/main/cpp/bearssl/src/hash/ghash_ctmul.c
			src/main/cpp/bearssl/src/hash/ghash_ctmul32.c
			src/main/cpp/bearssl/src/hash/ghash_ctmul64.c
			src/main/cpp/bearssl/src/hash/ghash_pclmul.c
			src/main/cpp/bearssl/src/hash/ghash_pwr8.c
			src/main/cpp/bearssl/src/hash/md5.c
			src/main/cpp/bearssl/src/hash/md5sha1.c
			src/main/cpp/bearssl/src/hash/mgf1.c
			src/main/cpp/bearssl/src/hash/multihash.c
			src/main/cpp/bearssl/src/hash/sha1.c
			src/main/cpp/bearssl/src/hash/sha2big.c
			src/main/cpp/bearssl/src/hash/sha2small.c
			src/main/cpp/bearssl/src/int/i15_add.c
			src/main/cpp/bearssl/src/int/i15_bitlen.c
			src/main/cpp/bearssl/src/int/i15_decmod.c
			src/main/cpp/bearssl/src/int/i15_decode.c
			src/main/cpp/bearssl/src/int/i15_decred.c
			src/main/cpp/bearssl/src/int/i15_encode.c
			src/main/cpp/bearssl/src/int/i15_fmont.c
			src/main/cpp/bearssl/src/int/i15_iszero.c
			src/main/cpp/bearssl/src/int/i15_moddiv.c
			src/main/cpp/bearssl/src/int/i15_modpow.c
			src/main/cpp/bearssl/src/int/i15_modpow2.c
			src/main/cpp/bearssl/src/int/i15_montmul.c
			src/main/cpp/bearssl/src/int/i15_mulacc.c
			src/main/cpp/bearssl/src/int/i15_muladd.c
			src/main/cpp/bearssl/src/int/i15_ninv15.c
			src/main/cpp/bearssl/src/int/i15_reduce.c
			src/main/cpp/bearssl/src/int/i15_rshift.c
			src/main/cpp/bearssl/src/int/i15_sub.c
			src/main/cpp/bearssl/src/int/i15_tmont.c
			src/main/cpp/bearssl/src/int/i31_add.c
			src/main/cpp/bearssl/src/int/i31_bitlen.c
			src/main/cpp/bearssl/src/int/i31_decmod.c
			src/main/cpp/bearssl/src/int/i31_decode.c
			src/main/cpp/bearssl/src/int/i31_decred.c
			src/main/cpp/bearssl/src/int/i31_encode.c
			src/main/cpp/bearssl/src/int/i31_fmont.c
			src/main/cpp/bearssl/src/int/i31_iszero.c
			src/main/cpp/bearssl/src/int/i31_moddiv.c
			src/main/cpp/bearssl/src/int/i31_modpow.c
			src/main/cpp/bearssl/src/int/i31_modpow2.c
			src/main/cpp/bearssl/src/int/i31_montmul.c
			src/main/cpp/bearssl/src/int/i31_mulacc.c
			src/main/cpp/bearssl/src/int/i31_muladd.c
			src/main/cpp/bearssl/src/int/i31_ninv31.c
			src/main/cpp/bearssl/src/int/i31_reduce.c
			src/main/cpp/bearssl/src/int/i31_rshift.c
			src/main/cpp/bearssl/src/int/i31_sub.c
			src/main/cpp/bearssl/src/int/i31_tmont.c
			src/main/cpp/bearssl/src/int/i32_add.c
			src/main/cpp/bearssl/src/int/i32_bitlen.c
			src/main/cpp/bearssl/src/int/i32_decmod.c
			src/main/cpp/bearssl/src/int/i32_decode.c
			src/main/cpp/bearssl/src/int/i32_decred.c
			src/main/cpp/bearssl/src/int/i32_div32.c
			src/main/cpp/bearssl/src/int/i32_encode.c
			src/main/cpp/bearssl/src/int/i32_fmont.c
			src/main/cpp/bearssl/src/int/i32_iszero.c
			src/main/cpp/bearssl/src/int/i32_modpow.c
			src/main/cpp/bearssl/src/int/i32_montmul.c
			src/main/cpp/bearssl/src/int/i32_mulacc.c
			src/main/cpp/bearssl/src/int/i32_muladd.c
			src/main/cpp/bearssl/src/int/i32_ninv32.c
			src/main/cpp/bearssl/src/int/i32_reduce.c
			src/main/cpp/bearssl/src/int/i32_sub.c
			src/main/cpp/bearssl/src/int/i32_tmont.c
			src/main/cpp/bearssl/src/int/i62_modpow2.c
			src/main/cpp/bearssl/src/kdf/hkdf.c
			src/main/cpp/bearssl/src/kdf/shake.c
			src/main/cpp/bearssl/src/mac/hmac.c
			src/main/cpp/bearssl/src/mac/hmac_ct.c
			src/main/cpp/bearssl/src/rand/aesctr_drbg.c
			src/main/cpp/bearssl/src/rand/hmac_drbg.c
			src/main/cpp/bearssl/src/rand/sysrng.c
			src/main/cpp/bearssl/src/rsa/rsa_default_keygen.c
			src/main/cpp/bearssl/src/rsa/rsa_default_modulus.c
			src/main/cpp/bearssl/src/rsa/rsa_default_oaep_decrypt.c
			src/main/cpp/bearssl/src/rsa/rsa_default_oaep_encrypt.c
			src/main/cpp/bearssl/src/rsa/rsa_default_pkcs1_sign.c
			src/main/cpp/bearssl/src/rsa/rsa_default_pkcs1_vrfy.c
			src/main/cpp/bearssl/src/rsa/rsa_default_priv.c
			src/main/cpp/bearssl/src/rsa/rsa_default_privexp.c
			src/main/cpp/bearssl/src/rsa/rsa_default_pss_sign.c
			src/main/cpp/bearssl/src/rsa/rsa_default_pss_vrfy.c
			src/main/cpp/bearssl/src/rsa/rsa_default_pub.c
			src/main/cpp/bearssl/src/rsa/rsa_default_pubexp.c
			src/main/cpp/bearssl/src/rsa/rsa_i15_keygen.c
			src/main/cpp/bearssl/src/rsa/rsa_i15_modulus.c
			src/main/cpp/bearssl/src/rsa/rsa_i15_oaep_decrypt.c
			src/main/cpp/bearssl/src/rsa/rsa_i15_oaep_encrypt.c
			src/main/cpp/bearssl/src/rsa/rsa_i15_pkcs1_sign.c
			src/main/cpp/bearssl/src/rsa/rsa_i15_pkcs1_vrfy.c
			src/main/cpp/bearssl/src/rsa/rsa_i15_priv.c
			src/main/cpp/bearssl/src/rsa/rsa_i15_privexp.c
			src/main/cpp/bearssl/src/rsa/rsa_i15_pss_sign.c
			src/main/cpp/bearssl/src/rsa/rsa_i15_pss_vrfy.c
			src/main/cpp/bearssl/src/rsa/rsa_i15_pub.c
			src/main/cpp/bearssl/src/rsa/rsa_i15_pubexp.c
			src/main/cpp/bearssl/src/rsa/rsa_i31_keygen.c
			src/main/cpp/bearssl/src/rsa/rsa_i31_keygen_inner.c
			src/main/cpp/bearssl/src/rsa/rsa_i31_modulus.c
			src/main/cpp/bearssl/src/rsa/rsa_i31_oaep_decrypt.c
			src/main/cpp/bearssl/src/rsa/rsa_i31_oaep_encrypt.c
			src/main/cpp/bearssl/src/rsa/rsa_i31_pkcs1_sign.c
			src/main/cpp/bearssl/src/rsa/rsa_i31_pkcs1_vrfy.c
			src/main/cpp/bearssl/src/rsa/rsa_i31_priv.c
			src/main/cpp/bearssl/src/rsa/rsa_i31_privexp.c
			src/main/cpp/bearssl/src/rsa/rsa_i31_pss_sign.c
			src/main/cpp/bearssl/src/rsa/rsa_i31_pss_vrfy.c
			src/main/cpp/bearssl/src/rsa/rsa_i31_pub.c
			src/main/cpp/bearssl/src/rsa/rsa_i31_pubexp.c
			src/main/cpp/bearssl/src/rsa/rsa_i32_oaep_decrypt.c
			src/main/cpp/bearssl/src/rsa/rsa_i32_oaep_encrypt.c
			src/main/cpp/bearssl/src/rsa/rsa_i32_pkcs1_sign.c
			src/main/cpp/bearssl/src/rsa/rsa_i32_pkcs1_vrfy.c
			src/main/cpp/bearssl/src/rsa/rsa_i32_priv.c
			src/main/cpp/bearssl/src/rsa/rsa_i32_pss_sign.c
			src/main/cpp/bearssl/src/rsa/rsa_i32_pss_vrfy.c
			src/main/cpp/bearssl/src/rsa/rsa_i32_pub.c
			src/main/cpp/bearssl/src/rsa/rsa_i62_keygen.c
			src/main/cpp/bearssl/src/rsa/rsa_i62_oaep_decrypt.c
			src/main/cpp/bearssl/src/rsa/rsa_i62_oaep_encrypt.c
			src/main/cpp/bearssl/src/rsa/rsa_i62_pkcs1_sign.c
			src/main/cpp/bearssl/src/rsa/rsa_i62_pkcs1_vrfy.c
			src/main/cpp/bearssl/src/rsa/rsa_i62_priv.c
			src/main/cpp/bearssl/src/rsa/rsa_i62_pss_sign.c
			src/main/cpp/bearssl/src/rsa/rsa_i62_pss_vrfy.c
			src/main/cpp/bearssl/src/rsa/rsa_i62_pub.c
			src/main/cpp/bearssl/src/rsa/rsa_oaep_pad.c
			src/main/cpp/bearssl/src/rsa/rsa_oaep_unpad.c
			src/main/cpp/bearssl/src/rsa/rsa_pkcs1_sig_pad.c
			src/main/cpp/bearssl/src/rsa/rsa_pkcs1_sig_unpad.c
			src/main/cpp/bearssl/src/rsa/rsa_pss_sig_pad.c
			src/main/cpp/bearssl/src/rsa/rsa_pss_sig_unpad.c
			src/main/cpp/bearssl/src/rsa/rsa_ssl_decrypt.c
			src/main/cpp/bearssl/src/ssl/prf.c
			src/main/cpp/bearssl/src/ssl/prf_md5sha1.c
			src/main/cpp/bearssl/src/ssl/prf_sha256.c
			src/main/cpp/bearssl/src/ssl/prf_sha384.c
			src/main/cpp/bearssl/src/ssl/ssl_ccert_single_ec.c
			src/main/cpp/bearssl/src/ssl/ssl_ccert_single_rsa.c
			src/main/cpp/bearssl/src/ssl/ssl_client.c
			src/main/cpp/bearssl/src/ssl/ssl_client_default_rsapub.c
			src/main/cpp/bearssl/src/ssl/ssl_client_full.c
			src/main/cpp/bearssl/src/ssl/ssl_engine.c
			src/main/cpp/bearssl/src/ssl/ssl_engine_default_aescbc.c
			src/main/cpp/bearssl/src/ssl/ssl_engine_default_aesccm.c
			src/main/cpp/bearssl/src/ssl/ssl_engine_default_aesgcm.c
			src/main/cpp/bearssl/src/ssl/ssl_engine_default_chapol.c
			src/main/cpp/bearssl/src/ssl/ssl_engine_default_descbc.c
			src/main/cpp/bearssl/src/ssl/ssl_engine_default_ec.c
			src/main/cpp/bearssl/src/ssl/ssl_engine_default_ecdsa.c
			src/main/cpp/bearssl/src/ssl/ssl_engine_default_rsavrfy.c
			src/main/cpp/bearssl/src/ssl/ssl_hashes.c
			src/main/cpp/bearssl/src/ssl/ssl_hs_client.c
			src/main/cpp/bearssl/src/ssl/ssl_hs_server.c
			src/main/cpp/bearssl/src/ssl/ssl_io.c
			src/main/cpp/bearssl/src/ssl/ssl_keyexport.c
			src/main/cpp/bearssl/src/ssl/ssl_lru.c
			src/main/cpp/bearssl/src/ssl/ssl_rec_cbc.c
			src/main/cpp/bearssl/src/ssl/ssl_rec_ccm.c
			src/main/cpp/bearssl/src/ssl/ssl_rec_chapol.c
			src/main/cpp/bearssl/src/ssl/ssl_rec_gcm.c
			src/main/cpp/bearssl/src/ssl/ssl_scert_single_ec.c
			src/main/cpp/bearssl/src/ssl/ssl_scert_single_rsa.c
			src/main/cpp/bearssl/src/ssl/ssl_server.c
			src/main/cpp/bearssl/src/ssl/ssl_server_full_ec.c
			src/main/cpp/bearssl/src/ssl/ssl_server_full_rsa.c
			src/main/cpp/bearssl/src/ssl/ssl_server_mine2c.c
			src/main/cpp/bearssl/src/ssl/ssl_server_mine2g.c
			src/main/cpp/bearssl/src/ssl/ssl_server_minf2c.c
			src/main/cpp/bearssl/src/ssl/ssl_server_minf2g.c
			src/main/cpp/bearssl/src/ssl/ssl_server_minr2g.c
			src/main/cpp/bearssl/src/ssl/ssl_server_minu2g.c
			src/main/cpp/bearssl/src/ssl/ssl_server_minv2g.c
			src/main/cpp/bearssl/src/symcipher/aes_big_cbcdec.c
			src/main/cpp/bearssl/src/symcipher/aes_big_cbcenc.c
			src/main/cpp/bearssl/src/symcipher/aes_big_ctr.c
			src/main/cpp/bearssl/src/symcipher/aes_big_ctrcbc.c
			src/main/cpp/bearssl/src/symcipher/aes_big_dec.c
			src/main/cpp/bearssl/src/symcipher/aes_big_enc.c
			src/main/cpp/bearssl/src/symcipher/aes_common.c
			src/main/cpp/bearssl/src/symcipher/aes_ct.c
			src/main/cpp/bearssl/src/symcipher/aes_ct64.c
			src/main/cpp/bearssl/src/symcipher/aes_ct64_cbcdec.c
			src/main/cpp/bearssl/src/symcipher/aes_ct64_cbcenc.c
			src/main/cpp/bearssl/src/symcipher/aes_ct64_ctr.c
			src/main/cpp/bearssl/src/symcipher/aes_ct64_ctrcbc.c
			src/main/cpp/bearssl/src/symcipher/aes_ct64_dec.c
			src/main/cpp/bearssl/src/symcipher/aes_ct64_enc.c
			src/main/cpp/bearssl/src/symcipher/aes_ct_cbcdec.c
			src/main/cpp/bearssl/src/symcipher/aes_ct_cbcenc.c
			src/main/cpp/bearssl/src/symcipher/aes_ct_ctr.c
			src/main/cpp/bearssl/src/symcipher/aes_ct_ctrcbc.c
			src/main/cpp/bearssl/src/symcipher/aes_ct_dec.c
			src/main/cpp/bearssl/src/symcipher/aes_ct_enc.c
			src/main/cpp/bearssl/src/symcipher/aes_pwr8.c
			src/main/cpp/bearssl/src/symcipher/aes_pwr8_cbcdec.c
			src/main/cpp/bearssl/src/symcipher/aes_pwr8_cbcenc.c
			src/main/cpp/bearssl/src/symcipher/aes_pwr8_ctr.c
			src/main/cpp/bearssl/src/symcipher/aes_pwr8_ctrcbc.c
			src/main/cpp/bearssl/src/symcipher/aes_small_cbcdec.c
			src/main/cpp/bearssl/src/symcipher/aes_small_cbcenc.c
			src/main/cpp/bearssl/src/symcipher/aes_small_ctr.c
			src/main/cpp/bearssl/src/symcipher/aes_small_ctrcbc.c
			src/main/cpp/bearssl/src/symcipher/aes_small_dec.c
			src/main/cpp/bearssl/src/symcipher/aes_small_enc.c
			src/main/cpp/bearssl/src/symcipher/aes_x86ni.c
			src/main/cpp/bearssl/src/symcipher/aes_x86ni_cbcdec.c
			src/main/cpp/bearssl/src/symcipher/aes_x86ni_cbcenc.c
			src/main/cpp/bearssl/src/symcipher/aes_x86ni_ctr.c
			src/main/cpp/bearssl/src/symcipher/aes_x86ni_ctrcbc.c
			src/main/cpp/bearssl/src/symcipher/chacha20_ct.c
			src/main/cpp/bearssl/src/symcipher/chacha20_sse2.c
			src/main/cpp/bearssl/src/symcipher/des_ct.c
			src/main/cpp/bearssl/src/symcipher/des_ct_cbcdec.c
			src/main/cpp/bearssl/src/symcipher/des_ct_cbcenc.c
			src/main/cpp/bearssl/src/symcipher/des_support.c
			src/main/cpp/bearssl/src/symcipher/des_tab.c
			src/main/cpp/bearssl/src/symcipher/des_tab_cbcdec.c
			src/main/cpp/bearssl/src/symcipher/des_tab_cbcenc.c
			src/main/cpp/bearssl/src/symcipher/poly1305_ctmul.c
			src/main/cpp/bearssl/src/symcipher/poly1305_ctmul32.c
			src/main/cpp/bearssl/src/symcipher/poly1305_ctmulq.c
			src/main/cpp/bearssl/src/symcipher/poly1305_i15.c
			src/main/cpp/bearssl/src/x509/asn1enc.c
			src/main/cpp/bearssl/src/x509/encode_ec_pk8der.c
			src/main/cpp/bearssl/src/x509/encode_ec_rawder.c
			src/main/cpp/bearssl/src/x509/encode_rsa_pk8der.c
			src/main/cpp/bearssl/src/x509/encode_rsa_rawder.c
			src/main/cpp/bearssl/src/x509/skey_decoder.c
			src/main/cpp/bearssl/src/x509/x509_decoder.c
			src/main/cpp/bearssl/src/x509/x509_knownkey.c
			src/main/cpp/bearssl/src/x509/x509_minimal.c
			src/main/cpp/bearssl/src/x509/x509_minimal_full.c)

add_library( # Specifies the name of the library.
			unalix_jni

			# Sets the library as a shared library.
			SHARED

			# Provides a relative path to your source file(s).
			src/main/cpp/unalixcpp/src/clear_url.cpp
			src/main/cpp/unalixcpp/src/unshort_url.cpp
			src/main/cpp/unalixcpp/src/uri.cpp
			src/main/cpp/unalixcpp/src/utils.cpp
			src/main/cpp/unalixcpp/src/http.cpp
			src/main/cpp/unalixcpp/src/unalix_jni.cpp)

target_link_libraries(
			unalix_jni
			bearssl)
