# Sets the minimum version of CMake required to build your native library.
# This ensures that a certain set of CMake features is available to
# your build.

cmake_minimum_required(VERSION 3.4.1)

project(Unalix)

# Specifies a library name, specifies whether the library is STATIC or
# SHARED, and provides relative paths to the source code. You can
# define multiple libraries by adding multiple add_library() commands,
# and CMake builds them for you. When you build your app, Gradle
# automatically packages shared libraries with your APK.
#set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Os -lbearssl")
set(CMAKE_CXX_STANDARD 20)

include_directories(main/cpp/unalixcpp/src main/cpp/bearssl/src main/cpp/bearssl/inc)



add_library( # Specifies the name of the library.
             bearssl

             # Sets the library as a shared library.
             SHARED

             # Provides a relative path to your source file(s).
             main/cpp/bearssl/src/settings.c
             main/cpp/bearssl/src/aead/ccm.c
             main/cpp/bearssl/src/aead/eax.c
             main/cpp/bearssl/src/aead/gcm.c
             main/cpp/bearssl/src/codec/ccopy.c
             main/cpp/bearssl/src/codec/dec16be.c
             main/cpp/bearssl/src/codec/dec16le.c
             main/cpp/bearssl/src/codec/dec32be.c
             main/cpp/bearssl/src/codec/dec32le.c
             main/cpp/bearssl/src/codec/dec64be.c
             main/cpp/bearssl/src/codec/dec64le.c
             main/cpp/bearssl/src/codec/enc16be.c
             main/cpp/bearssl/src/codec/enc16le.c
             main/cpp/bearssl/src/codec/enc32be.c
             main/cpp/bearssl/src/codec/enc32le.c
             main/cpp/bearssl/src/codec/enc64be.c
             main/cpp/bearssl/src/codec/enc64le.c
             main/cpp/bearssl/src/codec/pemdec.c
             main/cpp/bearssl/src/codec/pemenc.c
             main/cpp/bearssl/src/ec/ec_all_m15.c
             main/cpp/bearssl/src/ec/ec_all_m31.c
             main/cpp/bearssl/src/ec/ec_c25519_i15.c
             main/cpp/bearssl/src/ec/ec_c25519_i31.c
             main/cpp/bearssl/src/ec/ec_c25519_m15.c
             main/cpp/bearssl/src/ec/ec_c25519_m31.c
             main/cpp/bearssl/src/ec/ec_c25519_m62.c
             main/cpp/bearssl/src/ec/ec_c25519_m64.c
             main/cpp/bearssl/src/ec/ec_curve25519.c
             main/cpp/bearssl/src/ec/ec_default.c
             main/cpp/bearssl/src/ec/ec_keygen.c
             main/cpp/bearssl/src/ec/ec_p256_m15.c
             main/cpp/bearssl/src/ec/ec_p256_m31.c
             main/cpp/bearssl/src/ec/ec_p256_m62.c
             main/cpp/bearssl/src/ec/ec_p256_m64.c
             main/cpp/bearssl/src/ec/ec_prime_i15.c
             main/cpp/bearssl/src/ec/ec_prime_i31.c
             main/cpp/bearssl/src/ec/ec_pubkey.c
             main/cpp/bearssl/src/ec/ec_secp256r1.c
             main/cpp/bearssl/src/ec/ec_secp384r1.c
             main/cpp/bearssl/src/ec/ec_secp521r1.c
             main/cpp/bearssl/src/ec/ecdsa_atr.c
             main/cpp/bearssl/src/ec/ecdsa_default_sign_asn1.c
             main/cpp/bearssl/src/ec/ecdsa_default_sign_raw.c
             main/cpp/bearssl/src/ec/ecdsa_default_vrfy_asn1.c
             main/cpp/bearssl/src/ec/ecdsa_default_vrfy_raw.c
             main/cpp/bearssl/src/ec/ecdsa_i15_bits.c
             main/cpp/bearssl/src/ec/ecdsa_i15_sign_asn1.c
             main/cpp/bearssl/src/ec/ecdsa_i15_sign_raw.c
             main/cpp/bearssl/src/ec/ecdsa_i15_vrfy_asn1.c
             main/cpp/bearssl/src/ec/ecdsa_i15_vrfy_raw.c
             main/cpp/bearssl/src/ec/ecdsa_i31_bits.c
             main/cpp/bearssl/src/ec/ecdsa_i31_sign_asn1.c
             main/cpp/bearssl/src/ec/ecdsa_i31_sign_raw.c
             main/cpp/bearssl/src/ec/ecdsa_i31_vrfy_asn1.c
             main/cpp/bearssl/src/ec/ecdsa_i31_vrfy_raw.c
             main/cpp/bearssl/src/ec/ecdsa_rta.c
             main/cpp/bearssl/src/hash/dig_oid.c
             main/cpp/bearssl/src/hash/dig_size.c
             main/cpp/bearssl/src/hash/ghash_ctmul.c
             main/cpp/bearssl/src/hash/ghash_ctmul32.c
             main/cpp/bearssl/src/hash/ghash_ctmul64.c
             main/cpp/bearssl/src/hash/ghash_pclmul.c
             main/cpp/bearssl/src/hash/ghash_pwr8.c
             main/cpp/bearssl/src/hash/md5.c
             main/cpp/bearssl/src/hash/md5sha1.c
             main/cpp/bearssl/src/hash/mgf1.c
             main/cpp/bearssl/src/hash/multihash.c
             main/cpp/bearssl/src/hash/sha1.c
             main/cpp/bearssl/src/hash/sha2big.c
             main/cpp/bearssl/src/hash/sha2small.c
             main/cpp/bearssl/src/int/i15_add.c
             main/cpp/bearssl/src/int/i15_bitlen.c
             main/cpp/bearssl/src/int/i15_decmod.c
             main/cpp/bearssl/src/int/i15_decode.c
             main/cpp/bearssl/src/int/i15_decred.c
             main/cpp/bearssl/src/int/i15_encode.c
             main/cpp/bearssl/src/int/i15_fmont.c
             main/cpp/bearssl/src/int/i15_iszero.c
             main/cpp/bearssl/src/int/i15_moddiv.c
             main/cpp/bearssl/src/int/i15_modpow.c
             main/cpp/bearssl/src/int/i15_modpow2.c
             main/cpp/bearssl/src/int/i15_montmul.c
             main/cpp/bearssl/src/int/i15_mulacc.c
             main/cpp/bearssl/src/int/i15_muladd.c
             main/cpp/bearssl/src/int/i15_ninv15.c
             main/cpp/bearssl/src/int/i15_reduce.c
             main/cpp/bearssl/src/int/i15_rshift.c
             main/cpp/bearssl/src/int/i15_sub.c
             main/cpp/bearssl/src/int/i15_tmont.c
             main/cpp/bearssl/src/int/i31_add.c
             main/cpp/bearssl/src/int/i31_bitlen.c
             main/cpp/bearssl/src/int/i31_decmod.c
             main/cpp/bearssl/src/int/i31_decode.c
             main/cpp/bearssl/src/int/i31_decred.c
             main/cpp/bearssl/src/int/i31_encode.c
             main/cpp/bearssl/src/int/i31_fmont.c
             main/cpp/bearssl/src/int/i31_iszero.c
             main/cpp/bearssl/src/int/i31_moddiv.c
             main/cpp/bearssl/src/int/i31_modpow.c
             main/cpp/bearssl/src/int/i31_modpow2.c
             main/cpp/bearssl/src/int/i31_montmul.c
             main/cpp/bearssl/src/int/i31_mulacc.c
             main/cpp/bearssl/src/int/i31_muladd.c
             main/cpp/bearssl/src/int/i31_ninv31.c
             main/cpp/bearssl/src/int/i31_reduce.c
             main/cpp/bearssl/src/int/i31_rshift.c
             main/cpp/bearssl/src/int/i31_sub.c
             main/cpp/bearssl/src/int/i31_tmont.c
             main/cpp/bearssl/src/int/i32_add.c
             main/cpp/bearssl/src/int/i32_bitlen.c
             main/cpp/bearssl/src/int/i32_decmod.c
             main/cpp/bearssl/src/int/i32_decode.c
             main/cpp/bearssl/src/int/i32_decred.c
             main/cpp/bearssl/src/int/i32_div32.c
             main/cpp/bearssl/src/int/i32_encode.c
             main/cpp/bearssl/src/int/i32_fmont.c
             main/cpp/bearssl/src/int/i32_iszero.c
             main/cpp/bearssl/src/int/i32_modpow.c
             main/cpp/bearssl/src/int/i32_montmul.c
             main/cpp/bearssl/src/int/i32_mulacc.c
             main/cpp/bearssl/src/int/i32_muladd.c
             main/cpp/bearssl/src/int/i32_ninv32.c
             main/cpp/bearssl/src/int/i32_reduce.c
             main/cpp/bearssl/src/int/i32_sub.c
             main/cpp/bearssl/src/int/i32_tmont.c
             main/cpp/bearssl/src/int/i62_modpow2.c
             main/cpp/bearssl/src/kdf/hkdf.c
             main/cpp/bearssl/src/kdf/shake.c
             main/cpp/bearssl/src/mac/hmac.c
             main/cpp/bearssl/src/mac/hmac_ct.c
             main/cpp/bearssl/src/rand/aesctr_drbg.c
             main/cpp/bearssl/src/rand/hmac_drbg.c
             main/cpp/bearssl/src/rand/sysrng.c
             main/cpp/bearssl/src/rsa/rsa_default_keygen.c
             main/cpp/bearssl/src/rsa/rsa_default_modulus.c
             main/cpp/bearssl/src/rsa/rsa_default_oaep_decrypt.c
             main/cpp/bearssl/src/rsa/rsa_default_oaep_encrypt.c
             main/cpp/bearssl/src/rsa/rsa_default_pkcs1_sign.c
             main/cpp/bearssl/src/rsa/rsa_default_pkcs1_vrfy.c
             main/cpp/bearssl/src/rsa/rsa_default_priv.c
             main/cpp/bearssl/src/rsa/rsa_default_privexp.c
             main/cpp/bearssl/src/rsa/rsa_default_pss_sign.c
             main/cpp/bearssl/src/rsa/rsa_default_pss_vrfy.c
             main/cpp/bearssl/src/rsa/rsa_default_pub.c
             main/cpp/bearssl/src/rsa/rsa_default_pubexp.c
             main/cpp/bearssl/src/rsa/rsa_i15_keygen.c
             main/cpp/bearssl/src/rsa/rsa_i15_modulus.c
             main/cpp/bearssl/src/rsa/rsa_i15_oaep_decrypt.c
             main/cpp/bearssl/src/rsa/rsa_i15_oaep_encrypt.c
             main/cpp/bearssl/src/rsa/rsa_i15_pkcs1_sign.c
             main/cpp/bearssl/src/rsa/rsa_i15_pkcs1_vrfy.c
             main/cpp/bearssl/src/rsa/rsa_i15_priv.c
             main/cpp/bearssl/src/rsa/rsa_i15_privexp.c
             main/cpp/bearssl/src/rsa/rsa_i15_pss_sign.c
             main/cpp/bearssl/src/rsa/rsa_i15_pss_vrfy.c
             main/cpp/bearssl/src/rsa/rsa_i15_pub.c
             main/cpp/bearssl/src/rsa/rsa_i15_pubexp.c
             main/cpp/bearssl/src/rsa/rsa_i31_keygen.c
             main/cpp/bearssl/src/rsa/rsa_i31_keygen_inner.c
             main/cpp/bearssl/src/rsa/rsa_i31_modulus.c
             main/cpp/bearssl/src/rsa/rsa_i31_oaep_decrypt.c
             main/cpp/bearssl/src/rsa/rsa_i31_oaep_encrypt.c
             main/cpp/bearssl/src/rsa/rsa_i31_pkcs1_sign.c
             main/cpp/bearssl/src/rsa/rsa_i31_pkcs1_vrfy.c
             main/cpp/bearssl/src/rsa/rsa_i31_priv.c
             main/cpp/bearssl/src/rsa/rsa_i31_privexp.c
             main/cpp/bearssl/src/rsa/rsa_i31_pss_sign.c
             main/cpp/bearssl/src/rsa/rsa_i31_pss_vrfy.c
             main/cpp/bearssl/src/rsa/rsa_i31_pub.c
             main/cpp/bearssl/src/rsa/rsa_i31_pubexp.c
             main/cpp/bearssl/src/rsa/rsa_i32_oaep_decrypt.c
             main/cpp/bearssl/src/rsa/rsa_i32_oaep_encrypt.c
             main/cpp/bearssl/src/rsa/rsa_i32_pkcs1_sign.c
             main/cpp/bearssl/src/rsa/rsa_i32_pkcs1_vrfy.c
             main/cpp/bearssl/src/rsa/rsa_i32_priv.c
             main/cpp/bearssl/src/rsa/rsa_i32_pss_sign.c
             main/cpp/bearssl/src/rsa/rsa_i32_pss_vrfy.c
             main/cpp/bearssl/src/rsa/rsa_i32_pub.c
             main/cpp/bearssl/src/rsa/rsa_i62_keygen.c
             main/cpp/bearssl/src/rsa/rsa_i62_oaep_decrypt.c
             main/cpp/bearssl/src/rsa/rsa_i62_oaep_encrypt.c
             main/cpp/bearssl/src/rsa/rsa_i62_pkcs1_sign.c
             main/cpp/bearssl/src/rsa/rsa_i62_pkcs1_vrfy.c
             main/cpp/bearssl/src/rsa/rsa_i62_priv.c
             main/cpp/bearssl/src/rsa/rsa_i62_pss_sign.c
             main/cpp/bearssl/src/rsa/rsa_i62_pss_vrfy.c
             main/cpp/bearssl/src/rsa/rsa_i62_pub.c
             main/cpp/bearssl/src/rsa/rsa_oaep_pad.c
             main/cpp/bearssl/src/rsa/rsa_oaep_unpad.c
             main/cpp/bearssl/src/rsa/rsa_pkcs1_sig_pad.c
             main/cpp/bearssl/src/rsa/rsa_pkcs1_sig_unpad.c
             main/cpp/bearssl/src/rsa/rsa_pss_sig_pad.c
             main/cpp/bearssl/src/rsa/rsa_pss_sig_unpad.c
             main/cpp/bearssl/src/rsa/rsa_ssl_decrypt.c
             main/cpp/bearssl/src/ssl/prf.c
             main/cpp/bearssl/src/ssl/prf_md5sha1.c
             main/cpp/bearssl/src/ssl/prf_sha256.c
             main/cpp/bearssl/src/ssl/prf_sha384.c
             main/cpp/bearssl/src/ssl/ssl_ccert_single_ec.c
             main/cpp/bearssl/src/ssl/ssl_ccert_single_rsa.c
             main/cpp/bearssl/src/ssl/ssl_client.c
             main/cpp/bearssl/src/ssl/ssl_client_default_rsapub.c
             main/cpp/bearssl/src/ssl/ssl_client_full.c
             main/cpp/bearssl/src/ssl/ssl_engine.c
             main/cpp/bearssl/src/ssl/ssl_engine_default_aescbc.c
             main/cpp/bearssl/src/ssl/ssl_engine_default_aesccm.c
             main/cpp/bearssl/src/ssl/ssl_engine_default_aesgcm.c
             main/cpp/bearssl/src/ssl/ssl_engine_default_chapol.c
             main/cpp/bearssl/src/ssl/ssl_engine_default_descbc.c
             main/cpp/bearssl/src/ssl/ssl_engine_default_ec.c
             main/cpp/bearssl/src/ssl/ssl_engine_default_ecdsa.c
             main/cpp/bearssl/src/ssl/ssl_engine_default_rsavrfy.c
             main/cpp/bearssl/src/ssl/ssl_hashes.c
             main/cpp/bearssl/src/ssl/ssl_hs_client.c
             main/cpp/bearssl/src/ssl/ssl_hs_server.c
             main/cpp/bearssl/src/ssl/ssl_io.c
             main/cpp/bearssl/src/ssl/ssl_keyexport.c
             main/cpp/bearssl/src/ssl/ssl_lru.c
             main/cpp/bearssl/src/ssl/ssl_rec_cbc.c
             main/cpp/bearssl/src/ssl/ssl_rec_ccm.c
             main/cpp/bearssl/src/ssl/ssl_rec_chapol.c
             main/cpp/bearssl/src/ssl/ssl_rec_gcm.c
             main/cpp/bearssl/src/ssl/ssl_scert_single_ec.c
             main/cpp/bearssl/src/ssl/ssl_scert_single_rsa.c
             main/cpp/bearssl/src/ssl/ssl_server.c
             main/cpp/bearssl/src/ssl/ssl_server_full_ec.c
             main/cpp/bearssl/src/ssl/ssl_server_full_rsa.c
             main/cpp/bearssl/src/ssl/ssl_server_mine2c.c
             main/cpp/bearssl/src/ssl/ssl_server_mine2g.c
             main/cpp/bearssl/src/ssl/ssl_server_minf2c.c
             main/cpp/bearssl/src/ssl/ssl_server_minf2g.c
             main/cpp/bearssl/src/ssl/ssl_server_minr2g.c
             main/cpp/bearssl/src/ssl/ssl_server_minu2g.c
             main/cpp/bearssl/src/ssl/ssl_server_minv2g.c
             main/cpp/bearssl/src/symcipher/aes_big_cbcdec.c
             main/cpp/bearssl/src/symcipher/aes_big_cbcenc.c
             main/cpp/bearssl/src/symcipher/aes_big_ctr.c
             main/cpp/bearssl/src/symcipher/aes_big_ctrcbc.c
             main/cpp/bearssl/src/symcipher/aes_big_dec.c
             main/cpp/bearssl/src/symcipher/aes_big_enc.c
             main/cpp/bearssl/src/symcipher/aes_common.c
             main/cpp/bearssl/src/symcipher/aes_ct.c
             main/cpp/bearssl/src/symcipher/aes_ct64.c
             main/cpp/bearssl/src/symcipher/aes_ct64_cbcdec.c
             main/cpp/bearssl/src/symcipher/aes_ct64_cbcenc.c
             main/cpp/bearssl/src/symcipher/aes_ct64_ctr.c
             main/cpp/bearssl/src/symcipher/aes_ct64_ctrcbc.c
             main/cpp/bearssl/src/symcipher/aes_ct64_dec.c
             main/cpp/bearssl/src/symcipher/aes_ct64_enc.c
             main/cpp/bearssl/src/symcipher/aes_ct_cbcdec.c
             main/cpp/bearssl/src/symcipher/aes_ct_cbcenc.c
             main/cpp/bearssl/src/symcipher/aes_ct_ctr.c
             main/cpp/bearssl/src/symcipher/aes_ct_ctrcbc.c
             main/cpp/bearssl/src/symcipher/aes_ct_dec.c
             main/cpp/bearssl/src/symcipher/aes_ct_enc.c
             main/cpp/bearssl/src/symcipher/aes_pwr8.c
             main/cpp/bearssl/src/symcipher/aes_pwr8_cbcdec.c
             main/cpp/bearssl/src/symcipher/aes_pwr8_cbcenc.c
             main/cpp/bearssl/src/symcipher/aes_pwr8_ctr.c
             main/cpp/bearssl/src/symcipher/aes_pwr8_ctrcbc.c
             main/cpp/bearssl/src/symcipher/aes_small_cbcdec.c
             main/cpp/bearssl/src/symcipher/aes_small_cbcenc.c
             main/cpp/bearssl/src/symcipher/aes_small_ctr.c
             main/cpp/bearssl/src/symcipher/aes_small_ctrcbc.c
             main/cpp/bearssl/src/symcipher/aes_small_dec.c
             main/cpp/bearssl/src/symcipher/aes_small_enc.c
             main/cpp/bearssl/src/symcipher/aes_x86ni.c
             main/cpp/bearssl/src/symcipher/aes_x86ni_cbcdec.c
             main/cpp/bearssl/src/symcipher/aes_x86ni_cbcenc.c
             main/cpp/bearssl/src/symcipher/aes_x86ni_ctr.c
             main/cpp/bearssl/src/symcipher/aes_x86ni_ctrcbc.c
             main/cpp/bearssl/src/symcipher/chacha20_ct.c
             main/cpp/bearssl/src/symcipher/chacha20_sse2.c
             main/cpp/bearssl/src/symcipher/des_ct.c
             main/cpp/bearssl/src/symcipher/des_ct_cbcdec.c
             main/cpp/bearssl/src/symcipher/des_ct_cbcenc.c
             main/cpp/bearssl/src/symcipher/des_support.c
             main/cpp/bearssl/src/symcipher/des_tab.c
             main/cpp/bearssl/src/symcipher/des_tab_cbcdec.c
             main/cpp/bearssl/src/symcipher/des_tab_cbcenc.c
             main/cpp/bearssl/src/symcipher/poly1305_ctmul.c
             main/cpp/bearssl/src/symcipher/poly1305_ctmul32.c
             main/cpp/bearssl/src/symcipher/poly1305_ctmulq.c
             main/cpp/bearssl/src/symcipher/poly1305_i15.c
             main/cpp/bearssl/src/x509/asn1enc.c
             main/cpp/bearssl/src/x509/encode_ec_pk8der.c
             main/cpp/bearssl/src/x509/encode_ec_rawder.c
             main/cpp/bearssl/src/x509/encode_rsa_pk8der.c
             main/cpp/bearssl/src/x509/encode_rsa_rawder.c
             main/cpp/bearssl/src/x509/skey_decoder.c
             main/cpp/bearssl/src/x509/x509_decoder.c
             main/cpp/bearssl/src/x509/x509_knownkey.c
             main/cpp/bearssl/src/x509/x509_minimal.c
             main/cpp/bearssl/src/x509/x509_minimal_full.c)

add_library( # Specifies the name of the library.
             unalix

             # Sets the library as a shared library.
             SHARED

             # Provides a relative path to your source file(s).
             main/cpp/unalixcpp/src/clear_url.cpp
             main/cpp/unalixcpp/src/unshort_url.cpp
             main/cpp/unalixcpp/src/uri.cpp
             main/cpp/unalixcpp/src/utils.cpp)

target_link_libraries( # My code's library.
                       unalix
                       bearssl
                       )
